# DesignMentor-AI-Intelligent-System-Design-Interview-Coach

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  Dockerfile.prod  FINAL_REPORT.md  Procfile  QUICKSTART.md  README.md  SETUP.md  START.bat  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  test_api.py
alembic/: README  env.py
app/: chains.py  chains_v21.py  config.py  main.py  schemas.py  schemas_legacy.py  session_manager.py
app/ai/: __init__.py
app/api/: deps.py
app/core/: config.py  logging.py  middleware.py  security.py
app/db/: base.py  redis.py  session_manager.py
app/models/: __init__.py  analytics.py  design.py  diagram.py  interview.py  share.py  user.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: analytics_service.py  auth_service.py  design_service.py  interview_service.py  share_service.py
app/utils/: pdf_generator.py
frontend/: app.js  auth.js  index.html  login.html  register.html  style.css
frontend-next/: Dockerfile  next.config.js  package-lock.json  package.json  railway.toml  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx  loading.tsx  (+1 more)
prompts/: answer_evaluator.txt  design_battle.txt  design_critique.txt  design_generator.txt  diagram_c4.txt  diagram_dataflow.txt  diagram_erd.txt  diagram_generator.txt  diagram_sequence.txt  experience_aware_design.txt  failure_mode_analysis.txt  feedback_resources.txt  interview_questions.txt  learning_roadmap.txt  memory_coach.txt  persona_interviewer.txt  system.txt
scripts/: init_db.sql
(+44 files in other folders)
